Notes-App/notes-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: notes-app
  namespace: notes-app
spec: {}
status: {}
