Notes-App/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose-linux-amd64 convert -f docker-compose.yml -n notes-app
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose-linux-amd64 convert -f docker-compose.yml -n notes-app
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/nodejs-notes-app-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: MONGODB_URI
              value: mongodb://mongo/notesdb
            - name: NODE_ENV
              value: development
            - name: PORT
              value: "4000"
#            - name: BASE_URL
#              value: /notes-app
          image: thatevan/notes-app:latest
          name: web
          ports:
            - containerPort: 4000
              hostPort: 4000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
