Notes-App/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: notes-app
  annotations:
    spec.ingressClassName: "traefik"
spec:
  rules:
    - host: notes.app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 4000
